--- a/styles.css
+++ b/styles.css
@@ -267,17 +267,16 @@ background: white;
     font-size: 1.3em;
 }
 #vowel-box >.sound, #syllable-box > .sound, #compound-box > .sound{
-    width: 50px;
-    height: 50px;
+    width: 80px;
+    height: 40px;
     position: absolute;
-    top: 35%;
-    right: 25%;
-    transform: translate(0, -50%);
-    border-radius: 50%;
+    top: 25%;
+    right: 0px;
     padding: 0;
     border: none;
     background: var(--themeBlue);
     z-index: 0;
+    border-radius: 8px;
 }
 
 
