--- a/styles.css
+++ b/styles.css
@@ -270,13 +270,14 @@ background: white;
     width: 80px;
     height: 40px;
     position: absolute;
-    top: 25%;
-    right: 0px;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
     padding: 0;
     border: none;
     background: var(--themeBlue);
     z-index: 0;
-    border-radius: 8px;
+    
 }
 
 
